sandbox/output
StockProfit.tests.cpp:10:17: error: no matching constructor for initialization of 'StockProfit'
    StockProfit stockProfit(prices);
                ^           ~~~~~~
./StockProfit.hpp:8:7: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'vector<int>' to 'const StockProfit' for 1st argument
class StockProfit {
      ^
./StockProfit.hpp:8:7: note: candidate constructor (the implicit move constructor) not viable: no known conversion from 'vector<int>' to 'StockProfit' for 1st argument
class StockProfit {
      ^
./StockProfit.hpp:8:7: note: candidate constructor (the implicit default constructor) not viable: requires 0 arguments, but 1 was provided
1 error generated.
make: *** [test] Error 1
